<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bg">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTotalBudget"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtProfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/totalBalance"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/numProfitTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="@string/rm_00_00"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTotalProfit"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="@+id/cardTotalBudget"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintStart_toStartOf="@+id/cardTotalBudget"
            app:layout_constraintTop_toBottomOf="@+id/cardTotalBudget">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Income"
                android:textColor="@color/earned" />

            <TextView
                android:id="@+id/earnedTotalInHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="@string/rm_00_00"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTotalExpenses"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="@+id/cardTotalProfit"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/cardTotalProfit"
            app:layout_constraintTop_toBottomOf="@+id/cardTotalProfit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/expenses"
                android:textColor="@color/spent" />

            <TextView
                android:id="@+id/spentTotalInHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:text="@string/rm_00_00"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/intro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/intro"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cardTotalExpenses"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardTotalExpenses"
            app:layout_constraintTop_toBottomOf="@+id/cardTotalExpenses" />

        <TextView
            android:id="@+id/introMap"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="40dp"
            android:text="Looking for the store ? Click here!"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cardTotalExpenses"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardTotalExpenses"
            app:layout_constraintTop_toBottomOf="@+id/cardTotalExpenses" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTotalTransaction"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/bg_gray"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intro">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/view" />

            <TextView
                android:id="@+id/transactionLinkPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/add_transaction"
                android:textSize="12dp"
                android:textColor="@color/black" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewIncomeExpenses"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/bg_gray"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="@+id/cardTotalTransaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardTotalTransaction"
            app:layout_constraintTop_toTopOf="@+id/cardTotalTransaction"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/viewreport" />

            <TextView
                android:id="@+id/viewIncomeExpensesLinkPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/view_income_and_expenses_report"
                android:textColor="@color/black"
                android:textSize="12dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMaps"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="100dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introMap">>

            <ImageView
                android:id="@+id/mapsLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/maps" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- this the navigation view which draws and shows the navigation drawer -->
    <!-- include the menu created in the menu folder -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/sidebar_menu" />

</androidx.drawerlayout.widget.DrawerLayout>